--- a/Assignment-1/linktext.html
+++ b/Assignment-1/linktext.html
@@ -3,6 +3,6 @@
         <title>Message</title>
     </head>
     <body bgcolor="pink" text="blue">
-        <a href=”message.html” >Click Me!!!</a>
+        <a href="message.html">Click Me!!!</a>
     </body>
 </html> 
