--- a/Assignment-4/registration.html
+++ b/Assignment-4/registration.html
@@ -30,23 +30,21 @@
                         <td>Applied As</td>
                         <td>
                             Direct Candidate<input type ='radio'>
-						    Through Institute<input type ='radio'></td>
+						    Through Institute<input type ='radio'>
                         </td>
                     </tr>
                     <tr>
                         <td>1.3</td>
                         <td>Exam Cycle</td>
                         <td>
-                            <input type="text"
-name="cycle" placeholder="July, 2022">
+                            <input type="text" name="cycle" placeholder="July, 2022">
                         </td>
                     </tr>
                     <tr>
                         <td>1.4</td>
                         <td>Registration Fee Will Be Paid By?</td>
                         <td>
-                            <input type="text"
-name="candidate" placeholder="Candidate Direct to NIELIT">
+                            <input type="text" name="candidate" placeholder="Candidate Direct to NIELIT">
                         </td>
                     </tr>
                     <tr>
